--- a/index.css
+++ b/index.css
@@ -165,6 +165,27 @@ section{
     border: 0.9px solid;
     border-radius: 7.8px;
 }
+section .ply{
+    display: flex;
+}
+section span{
+    flex: 100%;
+    flex-direction: column;
+    text-align: center;
+    padding: 20px 0px;
+    height: 130px;
+    left: 10px;
+    top: 900px;
+    margin-top: 40px;
+    font-weight: 500;
+}
+section span i{
+    color: #1C73F5;
+    margin-right: 10px;
+    padding: 2 5px;
+    font-weight: 400;
+    font-size: 20px;
+}
 
 .row {
     display: flex;
@@ -179,25 +200,34 @@ section{
     margin-left: 20px;
     margin-right: 20px;
 }
-/*section i{
+section .social-icon{
+    text-align: center;
     display: flex;
-    align-items: center;
-}*/
+    flex-direction: row;
+    font-size: 30px;
+    padding: 0px;
+    gap: 70px;
+    position: absolute;
+    left: 18.48%;
+    right: 16.9%;
+    top: 1000px;
+  
+}
 footer{
     justify-content: center;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(160px, auto));
-    gap: 15px;
+    gap: 50px;
     position: absolute;
     width: 100%;
-    height: 400px;
+    height: 300px;
     left: 0px;
-    top: 925px;
+    top: 1170px;
     background-color: #1C73F5;
 
 
 }
-footer.social-icon{
+footer.widget-tit{
     top: 0;
 }
 
