--- a/connectwallet.css
+++ b/connectwallet.css
@@ -121,6 +121,9 @@ main .container .wallet p {
     text-align: center;
     transition: all .2s;
 }
+.container a{
+    text-decoration: none;
+}
 
 main .container .wallet p button img {
     margin-right: 1rem;
