--- a/index.css
+++ b/index.css
@@ -168,7 +168,7 @@ section {
 }
 
 .lndpg button {
-    background-color: rgb(119, 19, 19);
+    background-color: rgb(155, 26, 26);
     position: absolute;
     display: flex;
     flex-direction: row;
@@ -181,6 +181,7 @@ section {
     top: 323px;
     border: 0.9px solid;
     border-radius: 7.8px;
+    font-size: 14px;
 }
 
 section .ply {
